# adf-guardian

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  reporter.rs  scanner.rs
src/engine/: formatter.rs  guards.rs  mod.rs
