[package]
name = "adf-guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
ignore = "0.4.25"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
walkdir = "2.5.0"
